...

object StandardEquipment {
    const val BARBELL = "Barbell"
    const val DUMBBELL = "Dumbbell"
    const val CABLE = "Cable"
    const val MACHINE = "Machine"
    const val BODYWEIGHT = "Bodyweight"
    const val KETTLEBELL = "Kettlebell"
    const val RESISTANCE_BAND = "Resistance Band"
    const val BENCH = "Bench"
    const val PULLUP_BAR = "Pull-up Bar"
    const val DIP_BARS = "Dip Bars"
    const val SQUAT_RACK = "Squat Rack"
...
